--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <section class="form-section">
       <form class="search-form" id="search-form">
         <input
+        class="input-form"
           type="text"
           name="searchQuery"
           autocomplete="off"
